--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: compress
 	<section class="social">
 		<ul>
 			{% for social in site.data.social %}
-				<li><a href="{{ social.href }}" title="{{ social.title }}"><i class="{{ social.icon }}"></i></a></li>
+				<li><a href="{{ social.href }}" title="{{ social.title }}" target="_blank"><i class="{{ social.icon }}"></i></a></li>
 			{% endfor %}
 		</ul>
 	</section>
