--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 <section class="social">
 	<ul>
 		{% for social in site.data.social %}
-			<li><a href="{{ social.href }}" title="{{ social.title }}" target="_blank"><i class="{{ social.icon }}"></i></a></li>
+			<li><a href="{{ social.href }}" title="{{ social.title }}" target="{{ social.target }}"><i class="{{ social.icon }}"></i></a></li>
 		{% endfor %}
 	</ul>
 </section>
