Add GoatCounter script

--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@ body {
 </style>
 
 <span class="x">...</span>
+
+<script data-goatcounter="https://woutr.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
